[package]
name = "nanors"
version = "0.1.0"
authors = ["Garritt Moede <garritt.moede@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
rand = "0.8.4"
blake2 = "0.9.1"
byteorder = "1.4.3"
ed25519-dalek = "1.0.1"
bitvec = "0.22.3"
dialoguer = "0.8.0"
aes-gcm = "0.9.2"
hkdf = "0.11.0"
sha2 = "0.9.5"
hex = "0.4.3"
console = "0.14.1"
serde_json = "1.0.64"
futures = "0.3.15"

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/ede0m/ed25519-dalek", rev="ad94641198d8f4bb8b4b025f2f60e6faaab6cb5c" } 